--- a/pages/question5.html
+++ b/pages/question5.html
@@ -186,8 +186,8 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/ups modal pic.png">
-                            </img>
+                            <img src="../images/Answer_images/email5.png">
+                           
                         </div> 
                         <!-- <span class="close">&times;</span> -->
                         <div class="content__section--button userBtns">
@@ -203,7 +203,7 @@
                     <div class="modal-content ">
                         <div class="yay">
                             <img src="../images/phish happy.gif">
-                            </img>
+                            
                             <!-- <span class="close">&times;</span> -->
                             <h1>Yay! Good job.</h1>
                         </div>
