Added all images to mistakes.

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -179,7 +179,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/ups modal pic.png">
+                            <img src="../images/Answer_images/Presentation1/Slide1.PNG">
                             
                         </div>
                          <!-- <span class="close">&times;</span> -->
