--- a/pages/question10.html
+++ b/pages/question10.html
@@ -189,8 +189,8 @@
                                 <p>Scroll to learn why</p>
                             </div>
                             <div class="mistakes">
-                                <img src="../images/ups modal pic.png">
-                                </img>
+                                <img src="../images/Answer_images/Presentation1/Slide10.PNG">
+                                
                             </div> 
                             <!-- <span class="close">&times;</span> -->
                             <div class="content__section--button userBtns">
