--- a/pages/question2.html
+++ b/pages/question2.html
@@ -198,7 +198,7 @@
                     <!-- Modal content -->
                     <div class="modal-content ">
                         <div class="yay">
-                            <img src="../images/phish happy.gif">
+                            <img src="../images/Answer_images/Presentation1/Slide2.PNG">
                            
                             <!-- <span class="close">&times;</span> -->
                             <h1>Yay! Good job.</h1>
