--- a/pages/question4.html
+++ b/pages/question4.html
@@ -187,7 +187,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/ups modal pic.png">
+                            <img src="../images/Answer_images/Presentation1/Slide4.PNG">
                             </img>
                         </div> 
                         <!-- <span class="close">&times;</span> -->
