--- a/pages/question8.html
+++ b/pages/question8.html
@@ -184,8 +184,8 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/ups modal pic.png">
-                            </img>
+                            <img src="../images/Answer_images/Presentation1/Slide8.PNG">
+                            
                         </div> 
                         <!-- <span class="close">&times;</span> -->
                         <div class="content__section--button userBtns">
