--- a/pages/question9.html
+++ b/pages/question9.html
@@ -188,8 +188,8 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/ups modal pic.png">
-                            </img>
+                            <img src="../images/Answer_images/Presentation1/Slide9.PNG">
+                            
                         </div>
                          <!-- <span class="close">&times;</span> -->
                         <div class="content__section--button userBtns">
