update question 8 to answer valid B

--- a/pages/question8.html
+++ b/pages/question8.html
@@ -82,7 +82,7 @@
     <div class="teal-body">
 
 
-    <div data-answer="A" class="content">
+    <div data-answer="B" class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
