--- a/email_templates/email7.html
+++ b/email_templates/email7.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>google hangouts</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email7.css">
 </head>
 
@@ -52,6 +52,7 @@
         <br>
         <p style="font-size: small; color: gray;">
             This notification was sent to <span style="color: blue;">chris.kissler@gmail.com</span>.
+            <br>
             <span class="tooltip" style="color: blue;">Unsubscribe
                 <span class="tooltiptext tooltip-content">https://google.hangouts.com/unsubscribe/
                 </span>
