--- a/pages/question2.html
+++ b/pages/question2.html
@@ -182,7 +182,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/ups modal pic.png">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide2.PNG">
                             </img>
                         </div> 
                         <!-- <span class="close">&times;</span> -->
@@ -198,7 +198,7 @@
                     <!-- Modal content -->
                     <div class="modal-content ">
                         <div class="yay">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide2.PNG">
+                            <img src="../images/phish happy.gif">
                            
                             <!-- <span class="close">&times;</span> -->
                             <h1>Yay! Good job.</h1>
