move tooltip to end of 'link' (left:unset)

--- a/email_templates/email10.html
+++ b/email_templates/email10.html
@@ -57,7 +57,7 @@
                 If the package is not scheduled for delivery or picked up withing 48 hours, it will be returned to the sender.<br><br></p>
                 <h4 >TRACKING NUMBER: </h4>
                 <p class="tooltip" style="color: blue; text-decoration: underline;"> F0WPZX 5587729907
-                    <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/F0WP-ZX-5587-729907/<br> 
+                    <span class="tooltiptext tooltip-content shine" style="left: unset;">https://trk.cpro20.com/click/F0WP-ZX-5587-729907/<br> 
                         <strong>Click or tap to follow link</strong>
                     </span>
 <br><br></p>
