update oopsie images

--- a/pages/question3.html
+++ b/pages/question3.html
@@ -187,7 +187,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/ups modal pic.png">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide3.PNG">
                             
                         </div> 
                         <!-- <span class="close">&times;</span> -->
