Did the phish happy for question 3

--- a/pages/question3.html
+++ b/pages/question3.html
@@ -203,7 +203,7 @@
                     <!-- Modal content -->
                     <div class="modal-content ">
                         <div class="yay">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide3.PNG">
+                            <img src="../images/phish happy.gif">
 <!--                            
                             <span class="close">&times;</span> -->
                             <h1>Yay! Good job.</h1>
