Moved Functions for start and stop spinner

--- a/pages/results.html
+++ b/pages/results.html
@@ -103,7 +103,7 @@
             <!-- Home Page Body Start -->
             <main style="grid-area: text;">
                 <div id="busybox" class="fog_div" style="display: none;">
-                    <div style="top: 332px; left: 768px;"></div>
+                    <div style="top: 332px; left: 768px; z-index:1000"></div>
                 </div>
 
 
