--- a/pages/question8.html
+++ b/pages/question8.html
@@ -161,8 +161,8 @@
                         <!-- <nav data-role="navbar"> -->
             <div>
                 <div class="content__section--button answerBtns">
-                    <button class="answerButtons" value="A" data-selected="A">Phishing</button> 
-                    <button class="answerButtons" value="B" data-selected="B">Valid</button>
+                    <button class="answerButtons" data-value="A" data-selected="A">Phishing</button> 
+                    <button class="answerButtons" data-value="B" data-selected="B">Valid</button>
                 </div>
 
                 <div class="content__section--button submitBtn userBtns">
