update oopsie images

--- a/pages/question7.html
+++ b/pages/question7.html
@@ -188,7 +188,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/ups modal pic.png">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide7.png">
                             </img>
                         </div>
                          <!-- <span class="close">&times;</span> -->
