--- a/pages/question7.html
+++ b/pages/question7.html
@@ -187,8 +187,8 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide7.png">
-                            </img>
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide7.PNG">
+                           
                         </div>
                          <!-- <span class="close">&times;</span> -->
                         <div class="content__section--button userBtns">
@@ -204,7 +204,7 @@
                     <div class="modal-content ">
                         <div class="yay">
                             <img src="../images/phish happy.gif">
-                            </img>
+                            
                             <!-- <span class="close">&times;</span> -->
                             <h1>Yay! Good job.</h1>
                         </div>
@@ -230,6 +230,6 @@
 </body>
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/old.modal.js"></script> -->
 
 </html>
