comment out modal.js/add alt to img slide7

--- a/pages/question7.html
+++ b/pages/question7.html
@@ -188,7 +188,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide7.png">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide7.png" alt="google answer">
                             </img>
                         </div>
                          <!-- <span class="close">&times;</span> -->
@@ -231,6 +231,6 @@
 </body>
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/modal.js"></script> -->
 
 </html>
