comment out modal.js

--- a/pages/question2.html
+++ b/pages/question2.html
@@ -224,6 +224,6 @@
 
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/modal.js"></script> -->
 
 </html>
