--- a/pages/question4.html
+++ b/pages/question4.html
@@ -229,6 +229,6 @@
 <!-- END TEAL SECTION -->
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/modal.js"></script> -->
 
 </html>
