--- a/pages/question8.html
+++ b/pages/question8.html
@@ -227,6 +227,6 @@
 </body>
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/modal.js"></script> -->
 
 </html>
