--- a/pages/question1.html
+++ b/pages/question1.html
@@ -220,6 +220,6 @@
 
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/modal.js"></script> -->
 
 </html>
