--- a/pages/question3.html
+++ b/pages/question3.html
@@ -229,7 +229,7 @@
 </body>
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/modal.js"></script> -->
 
 
 </html>
