--- a/pages/question5.html
+++ b/pages/question5.html
@@ -229,6 +229,6 @@
 </body>
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/modal.js"></script> -->
 
 </html>
