--- a/pages/question6.html
+++ b/pages/question6.html
@@ -284,6 +284,6 @@
 </body>
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/modal.js"></script> -->
 
 </html>
