--- a/pages/question9.html
+++ b/pages/question9.html
@@ -231,6 +231,6 @@
 </body>
 
 <script src="../js/scripts.js"></script>
-<script src="../js/modal.js"></script>
+<!-- <script src="../js/modal.js"></script> -->
 
 </html>
