made the Cap PNG to lowercase

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -179,7 +179,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide1.PNG">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide1.png">
                             
                         </div>
                          <!-- <span class="close">&times;</span> -->
