--- a/pages/question10.html
+++ b/pages/question10.html
@@ -189,7 +189,7 @@
                                 <p>Scroll to learn why</p>
                             </div>
                             <div class="mistakes">
-                                <img src="../images/Answer_images/Quiz_Site_Slides/Slide10.PNG">
+                                <img src="../images/Answer_images/Quiz_Site_Slides/Slide10.png">
                                 
                             </div> 
                             <!-- <span class="close">&times;</span> -->
