--- a/pages/question11.html
+++ b/pages/question11.html
@@ -189,7 +189,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide11.PNG">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide11.png">
                             
                         </div> 
                         <!-- <span class="close">&times;</span> -->
