--- a/pages/question4.html
+++ b/pages/question4.html
@@ -187,7 +187,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide4.PNG">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide4.png">
                             </img>
                         </div> 
                         <!-- <span class="close">&times;</span> -->
