--- a/pages/question5.html
+++ b/pages/question5.html
@@ -186,7 +186,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide5.PNG">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide5.png">
                            
                         </div> 
                         <!-- <span class="close">&times;</span> -->
