--- a/pages/question6.html
+++ b/pages/question6.html
@@ -241,7 +241,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide6.PNG">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide6.png">
                             
                         </div> 
                         <!-- <span class="close">&times;</span> -->
