--- a/pages/question8.html
+++ b/pages/question8.html
@@ -184,7 +184,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide8.PNG">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide8.png">
                             
                         </div> 
                         <!-- <span class="close">&times;</span> -->
