--- a/pages/question9.html
+++ b/pages/question9.html
@@ -188,7 +188,7 @@
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
-                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide9.PNG">
+                            <img src="../images/Answer_images/Quiz_Site_Slides/Slide9.png">
                             
                         </div>
                          <!-- <span class="close">&times;</span> -->
