added warning to results page for download.

--- a/pages/results.html
+++ b/pages/results.html
@@ -129,7 +129,8 @@
                 <!-- E-mail: <input type="text" name="email"><br>
                  -->
                  <div class="content__section--button">
-                    <button id="certBtn" style="vertical-align:middle"><span>Get Certificate</span></button>
+                    <button id="certBtn" style="vertical-align:middle"><span>Get Certificate</span></button><br><br>
+                    <p id="certMultClick">Please wait for download to complete. DO NOT CLICK "Get Certificate" multiple times. You have been warned!</p>
                     <button id="tryAgain"><span>Try again</span></button>
 
                     </div>
