--- a/pages/question8.html
+++ b/pages/question8.html
@@ -179,7 +179,7 @@
                         </iframe> -->
                         <div class="sad">
 
-                            <img src="../images/phish_sad_1-removebg-preview 1.png" alt="">
+                            <img src="../images/animv1small.gif" alt="">
                             <h1>Dang! you got hooked.</h1>
                             <p>Scroll to learn why</p>
                         </div>
