setting up log system

--- a/pages/org.results.html
+++ b/pages/org.results.html
@@ -117,27 +117,29 @@
                             </form> -->
 
                     <!-- <form action="/php/sendResults.php" method="post"> -->
-                    <form action="/php/logUserResults.php" class="contact_form" method="post" name="form">
-                        <p value="uname" name="uName" id="uName"></p>
-                        <p value="emailAddr" name="emailAddr" id="uEmail"></p>
-                        <p style="font-size: 1.5em; margin: 20px 0;" value="results" name="results">You scored <span
-                                id="uResults"></span>%
-                        </p>
 
-                        <input type="hidden" name="userName" id="userName">
-                        <input type="hidden" name="userEmailAddr" id="userEmailAddr">
-                        <input type="hidden" name="userResults" id="userResults"> -->
+                    <p value="uname" name="uName" id="uName"></p>
+                    <p value="emailAddr" name="emailAddr" id="uEmail"></p>
+                    <p style="font-size: 1.5em; margin: 20px 0;" value="results" name="results">You scored <span
+                            id="uResults"></span>%
+                    </p>
 
-                        <div class="content__section--button">
-                            <button id="certBtn" style="vertical-align:middle"><span>Get
-                                    Certificate</span></button><br><br>
-                            <p id="certMultClick">Please wait for download to complete. DO NOT CLICK "Get Certificate"
-                                multiple times. You have been warned!</p>
-                            <button id="tryAgain"><span>Try again</span></button>
+                    <!-- <input type="hidden" name="userName" id="userName">
+                                    <input type="hidden" name="userEmailAddr" id="userEmailAddr">
+                                        <input type="hidden" name="userResults" id="userResults"> -->
+                    <!-- You scored <input id="userResults" type="input" name="name">% -->
+                    <!-- Name: <input type="text" name="name"><br> -->
+                    <!-- E-mail: <input type="text" name="email"><br>
+                 -->
+                    <div class="content__section--button">
+                        <button id="certBtn" style="vertical-align:middle"><span>Get Certificate</span></button><br><br>
+                        <p id="certMultClick">Please wait for download to complete. DO NOT CLICK "Get Certificate"
+                            multiple times. You have been warned!</p>
+                        <button id="tryAgain"><span>Try again</span></button>
 
-                        </div>
-                    </form>
-                    <!-- <button id="certBtn" test2
+                    </div>
+
+                    <!-- <button id="certBtn"
                     style="width: 200px; height: 75px;background: #C82255; border-radius: 10px; border: none; color: white; font-size: 1.5em; font-family:'Courier New', Courier, monospace">Download
                     Certificate</button> -->
                     <!-- <input style="width: 200px; height: 50px;background: #C82255; border-radius: 10px; border: none; color: white; font-size: 1.5em; font-family:'Courier New', Courier, monospace" type="submit"> -->
