Updated logging. Now working.

--- a/pages/results.html
+++ b/pages/results.html
@@ -126,7 +126,7 @@
 
                         <input type="hidden" name="userName" id="userName">
                         <input type="hidden" name="userEmailAddr" id="userEmailAddr">
-                        <input type="hidden" name="userResults" id="userResults"> -->
+                        <input type="hidden" name="userResults" id="userResults"> 
 
                         <div class="content__section--button">
                             <button id="certBtn" style="vertical-align:middle"><span>Get
