fixing PHP and results

--- a/pages/results.html
+++ b/pages/results.html
@@ -122,20 +122,22 @@
                         <p value="emailAddr" name="emailAddr" id="uEmail"></p>
                         <p style="font-size: 1.5em; margin: 20px 0;" value="results" name="results">You scored <span
                                 id="uResults"></span>%
-                        </p> 
+                        </p>
 
                         <input type="hidden" name="userName" id="userName">
                         <input type="hidden" name="userEmailAddr" id="userEmailAddr">
-                        <input type="hidden" name="userResults" id="userResults"> 
+                        <input type="hidden" name="userResults" id="userResults">
 
                         <div class="content__section--button">
                             <button id="certBtn" style="vertical-align:middle"><span>Get
                                     Certificate</span></button><br><br>
                             <p id="certMultClick">Please wait for download to complete. DO NOT CLICK "Get Certificate"
                                 multiple times. You have been warned!</p>
-                            <button id="tryAgain"><span>Try again</span></button>
-
                         </div>
+                        <div class="content__section--button">
+                            <button id="tryAgain"><span>Try again</span></button>
+                        </div>
+
                     </form>
                     <!-- <button id="certBtn" test22
                     style="width: 200px; height: 75px;background: #C82255; border-radius: 10px; border: none; color: white; font-size: 1.5em; font-family:'Courier New', Courier, monospace">Download
