--- a/pages/register.html
+++ b/pages/register.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../css/kelp.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Phishing Quiz</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
 
 </head>
 
@@ -127,7 +127,7 @@
 
 </body>
 
-
+<script src="../js/jquery-3.6.0.js"></script>
 <!-- <script ref="preload" src="../js/registration.js"></script> -->
 <script rel="preload" src="../js/registration.js"></script>
 
