Cleaning upd jquery src.

--- a/pages/question5.html
+++ b/pages/question5.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Quiz</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
         <link rel="stylesheet" href="../css/kelp.css">
 
     <link rel="stylesheet" href="../css/style.css">
@@ -227,7 +227,7 @@
 <!-- END TEAL SECTION -->
 
 </body>
-
+<script src="../js/jquery-3.6.0.js"></script>
 <script src="../js/scripts.js"></script>
 <!-- <script src="../js/modal.js"></script> -->
 
