--- a/pages/question4.html
+++ b/pages/question4.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Quiz</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
         <link rel="stylesheet" href="../css/kelp.css">
 
     <link rel="stylesheet" href="../css/style.css">
@@ -188,7 +188,7 @@
                         </div>
                         <div class="mistakes">
                             <img src="../images/Answer_images/Quiz_Site_Slides/Slide4.png">
-                            </img>
+                          
                         </div> 
                         <!-- <span class="close">&times;</span> -->
                         <div class="content__section--button userBtns">
@@ -204,7 +204,7 @@
                     <div class="modal-content ">
                         <div class="yay">
                             <img src="../images/phish happy.gif">
-                            </img>
+                          
                             <!-- <span class="close">&times;</span> -->
                             <h1>Yay! Good job.</h1>
                         </div>
@@ -227,7 +227,7 @@
 </div><!--teal-body-->
 
 <!-- END TEAL SECTION -->
-
+<script src="../js/jquery-3.6.0.js"></script>
 <script src="../js/scripts.js"></script>
 <!-- <script src="../js/modal.js"></script> -->
 
