--- a/pages/question9.html
+++ b/pages/question9.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Quiz</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
         <link rel="stylesheet" href="../css/kelp.css">
 
     <link rel="stylesheet" href="../css/style.css">
@@ -205,7 +205,7 @@
                     <div class="modal-content ">
                         <div class="yay">
                             <img src="../images/phish happy.gif">
-                            </img>
+                           
                             <!-- <span class="close">&times;</span> -->
                             <h1>Yay! Good job.</h1>
                         </div>
@@ -230,6 +230,7 @@
 
 </body>
 
+<script src="../js/jquery-3.6.0.js"></script>
 <script src="../js/scripts.js"></script>
 <!-- <script src="../js/modal.js"></script> -->
 
