--- a/pages/results.html
+++ b/pages/results.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Quiz</title>
-    <script src="../js/busy_indicator.js" type="text/javascript"></script>
+    <script src="../js/jquery-3.6.0.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></sript> -->
     <link rel="stylesheet" href="../css/kelp.css">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -175,7 +175,7 @@
     <!-- END TEAL SECTION -->
 
 </body>
-
+<script src="../js/busy_indicator.js" type="text/javascript"></script>
 <script src="../js/results.js"></script>
 
 
