disabled the certMultClick in css

--- a/pages/results.html
+++ b/pages/results.html
@@ -97,7 +97,7 @@
             <section class="content__section" data-theme="b" data-role="page" id="pgResults" data-fullscreen="true">
                 <!-- Navbar setup Start -->
                 <header data-role="header">
-                    <h1 id="results-h1">Phishing Results</h1>
+                    <h1 id="results-h1"></h1>
                 </header>
                 <div class="content__section--img-container img-container">
                     <img class="responsiveImage" width="300" height="auto" src="../images/circle-phish.gif"
