Added you scored.

--- a/pages/results.html
+++ b/pages/results.html
@@ -121,7 +121,7 @@
                     <form action="/php/logUserResults.php" class="contact_form" method="post" name="form">
                         <p value="uname" name="uName" id="uName"></p>
                         <p value="emailAddr" name="emailAddr" id="uEmail"></p>
-                        <p style="font-size: 1.5em; margin: 20px 0;" value="results" name="results"><span
+                        <p style="font-size: 1.5em; margin: 20px 0;" value="results" name="results">You Scored: <span
                                 id="uResults"></span>%
                         </p>
 
