on index.h did a localstorage.clear()

--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <script>
-        localStorage.removeItem('userRepo')
-        localStorage.removeItem('userEmail')
-        localStorage.removeItem('numQ')
-        localStorage.removeItem('lastName')
-        localStorage.removeItem('firstName')
-        localStorage.removeItem('userFin')
+        localStorage.clear()
+       
     </script>
 </head>
 
