Fixed back button to load issue.

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             </div>
         <!-- </article> -->
             <div class="content__section--button">
-                <a ”javascript:history.go(0)” href="./pages/register.html">
-                    <button style="vertical-align:middle"><span>TAKE QUIZ</span></button>
+                
+                    <button id="takeQuiz" style="vertical-align:middle"><span>TAKE QUIZ</span></button>
                 </a>
             </div>
 
