scared fish animation added

--- a/pages/results.html
+++ b/pages/results.html
@@ -100,8 +100,8 @@
                     <h1 id="results-h1"></h1>
                 </header>
                 <div class="content__section--img-container img-container">
-                    <img class="responsiveImage" width="300" height="auto" src="../images/circle-phish.gif"
-                        alt="Welcome-logo">
+                    <img class="responsiveImage" width="300" height="auto" src="../images/scared-fish-final.gif"
+                        alt="scared fish gif">
                 </div>
 
                 <!-- Home Page Body Start -->
