scared fish animation added

--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -103,7 +103,7 @@
             </div>
             <div class="content__section--img-container img-container">
                 <!-- <img class="responsiveImage" width="300" height="auto" src="../images/phishing phone.png" alt="Welcome-logo"> -->
-                <img width="300" height="auto" src="../images/phishing_phone-removebg-preview 1.png" alt="https://www.ecranmobile.fr/photo/art/grande/46761730-37235619.jpg?v=1590997268">
+                <img width="300" height="auto" src="../images/scared-fish-final.gif" alt="scared fish gif">
             </div>
 
             <!-- This is the NAV  -->
