add logo and spans for RWD

--- a/index.html
+++ b/index.html
@@ -79,7 +79,14 @@
     
         <!-- TEAL SECTION -->
         <div class="teal-body">
-    
+    <div class="quiz-header">
+        <div class="quiz-header--toolbar">
+            <img src="./images/227_logo.png" width="10%" alt="227 InfoSec logo">
+        </div>
+
+    </div>
+    <span class="expand"></span>
+
 
     <div class="content">
     <!-- Welcome Page Start WELCOME-->
@@ -111,10 +118,13 @@
             </div>
 
     </section>
+</div>
+<span class="expand"></span>
+
         <footer data-role="footer" data-position="fixed">
             <h6>227 InfoSec, Inc. 2022&copy;</h6>
         </footer>
-</div>
+
 </div><!--teal-body-->
 
 <!-- END TEAL SECTION -->
