--- a/pages/results.html
+++ b/pages/results.html
@@ -90,13 +90,20 @@
 
     <!-- TEAL SECTION -->
     <div class="teal-body">
+        <div class="quiz-header">
+            <div class="quiz-header--toolbar">
+                <img class="responsiveImage" width="300" height="auto" src="/images/227_logo.png" alt="227 InfoSec logo">
+            </div>
+    
+        </div>
+        <span class="expand"></span>
 
 
         <div class="content">
             <!-- Results Page -->
             <section class="content__section" data-theme="b" data-role="page" id="pgResults" data-fullscreen="true">
                 <!-- Navbar setup Start -->
-                <header data-role="header">
+                <header class="content__section--title" data-role="header" data-position="fixed">
                     <h1 id="results-h1"></h1>
                 </header>
                 <div class="content__section--img-container img-container">
@@ -132,8 +139,8 @@
                         <div class="content__section--button">
                             <button id="certBtn" style="vertical-align:middle"><span>Get
                                     Certificate</span></button><br><br>
-                            <p id="certMultClick">Please wait for download to complete. DO NOT CLICK "Get Certificate"
-                                multiple times. You have been warned!</p>
+                            <p id="certMultClick">Please wait for download to complete. <br>DO NOT CLICK "Get Certificate"
+                                multiple times.<br> You have been warned!</p>
                         </div>
                     </form>
 
@@ -162,13 +169,16 @@
 
 
             </section>
-
+        </div>
+        <span class="expand"></span>
+        
             <!-- Footer Start -->
             <footer data-role="footer" data-position="fixed">
                 <h6>227 InfoSec, Inc. 2022&copy;</h6>
             </footer>
 
         </div>
+
     </div>
     <!--teal-body-->
 
