creative 'good jobs'

--- a/pages/question4.html
+++ b/pages/question4.html
@@ -206,7 +206,7 @@
                             <img src="../images/phish happy.gif">
                           
                             <!-- <span class="close">&times;</span> -->
-                            <h1>Yay! Good job.</h1>
+                            <h1>Fintastic!</h1>
                         </div>
                         <div class="content__section--button userBtns">
                             <button id="0" class="next-btn"><span>Next</span></button>
