--- a/pages/question6.html
+++ b/pages/question6.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="../css/kelp.css">
 
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email6.css">
     <link rel="stylesheet" href="../css/modal.css">
 
@@ -81,8 +81,15 @@
     <!-- TEAL SECTION -->
     <div class="teal-body">
 
+        <div class="quiz-header">
+            <div class="quiz-header--toolbar">
+                <img src="/images/227_logo.png" width="10%" alt="227 InfoSec logo">
+            </div>
+        </div> <!--end quiz-header-->
 
-    <div class="content">
+        <span class="expand"></span>
+
+        <div class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
@@ -213,19 +220,17 @@
 
                     </div>
                 </div> -->
-</iframe>
+                </iframe>
             </main>
-            <!-- <nav data-role="navbar"> -->
-            <div>
-                <div class="content__section--button answerBtns">
-                    <button class="answerButtons" value="A" data-selected="A">Phishing</button> 
+
+                <!-- BUTTONS -->
+                <div class="allBtns answerBtns content__section--button">
+
+                    <button class="answerButtons" value="A" data-selected="A">Phishing</button>
                     <button class="answerButtons" value="B" data-selected="B">Valid</button>
-                </div>
 
-                <div class="content__section--button submitBtn userBtns">
-                    <button id="btn"><span>Submit</span></button>
+                    <button id="btn" class="content__section--button nextBtns submitBtn"><span>Submit</span></button>
                 </div>
-
 
                 <!-- MODAL -->
                 <div id="incorrect" class="modal incorrect">
@@ -237,7 +242,7 @@
                         <div class="sad">
 
                             <img src="../images/animv13small.gif" alt="">
-                            <h1>Dang! you got hooked.</h1>
+                            <h1>Tang nabbit! you got caught.</h1>
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
@@ -245,7 +250,7 @@
                             
                         </div> 
                         <!-- <span class="close">&times;</span> -->
-                        <div class="content__section--button userBtns">
+                        <div class="content__section--button nextBtns">
                             <button id="0" class="next-btn"><span>Next</span></button>
                         </div>
                     </div>
@@ -260,26 +265,26 @@
                             <img src="../images/phish happy.gif">
                        
                             <!-- <span class="close">&times;</span> -->
-                            <h1>Yay! Good job.</h1>
+                            <h1>Swimming along nicely!</h1>
                         </div>
-                        <div class="content__section--button userBtns">
+                        <div class="content__section--button nextBtns">
                             <button id="0" class="next-btn"><span>Next</span></button>
                         </div>
                     </div>
 
-                </div>
-        </div>
-
-            <!-- Footer Start -->
-            <footer data-role="footer" data-position="fixed">
-                <h6>227 InfoSec, Inc. 2022&copy;</h6>
-            </footer>
         </section>
+    </div><!--end content-->
 
-    </div>
-</div><!--teal-body-->
+    <span class="expand"></span>
 
-<!-- END TEAL SECTION -->
+    <!-- Footer Start -->
+        <footer data-role="footer" data-position="fixed">
+            <h6>227 InfoSec, Inc. 2022&copy;</h6>
+        </footer>
+
+    </div><!--teal-body-->
+
+    <!-- END TEAL SECTION -->
 
 </body>
 <script src="../js/jquery-3.6.0.js"></script>
