--- a/index.html
+++ b/index.html
@@ -79,22 +79,24 @@
     
         <!-- TEAL SECTION -->
         <div class="teal-body">
-    <div class="quiz-header">
-        <div class="quiz-header--toolbar">
-            <img src="./images/227_logo.png" width="10%" alt="227 InfoSec logo">
-        </div>
 
-    </div>
-    <span class="expand"></span>
+            <div class="quiz-header">
+                <div class="quiz-header--toolbar">
+                    <img class="logo" src="/images/227-logo-waterblue-horz.svg" alt="227 InfoSec logo">
+                    <img class="logo-sm" src="/images/227logo-waterblue-vert.svg" alt="227 InfoSec logo">
+                    <h4>Go Phish! <span>Phishing Quiz</span></h4>
+                </div>
+            </div><!--end quiz-header-->
+
+            <span class="expand"></span>
 
 
     <div class="content">
     <!-- Welcome Page Start WELCOME-->
     <section class="content__section" data-theme="b" data-role="page" id="pgWelcome" data-fullscreen="true">
         <!-- Navbar setup Start -->
-        <header class="content__section--title" data-role="header" data-position="fixed">
+        <header class="content__section--title"   data-position="fixed">
             <h1>Will you click the bait?</h1>
-            <br>
         </header>
         <div class="content__section--text">
                         <p>
@@ -122,7 +124,7 @@
 <span class="expand"></span>
 
         <footer data-role="footer" data-position="fixed">
-            <h6>227 InfoSec, Inc. 2022&copy;</h6>
+            <h6><span style="font-family: 'ubuntu'">227 InfoSec, Inc.</span> in collaboration with <span style="font-family: 'Oswald'">TheKuziCollaborative</span> &copy;2022 </h6>
         </footer>
 
 </div><!--teal-body-->
