--- a/pages/results.html
+++ b/pages/results.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <script src="https://cdn.rawgit.com/yWorks/jsPDF/e2a73c5b/dist/jspdf.min.js"></script>
-    <script
-        src="https://cdn.rawgit.com/sphilee/jsPDF-CustomFonts-support/bcc544cd/dist/jspdf.customfonts.min.js"></script>
+    <script src="https://cdn.rawgit.com/sphilee/jsPDF-CustomFonts-support/bcc544cd/dist/jspdf.customfonts.min.js">
+    </script>
     <!-- <script src="https://cdn.rawgit.com/sphilee/jsPDF-CustomFonts-support/bcc544cd/dist/default_vfs.js"></script> -->
 
     <!-- WHY IS THIS INCLUDED? -->
@@ -90,12 +90,15 @@
 
     <!-- TEAL SECTION -->
     <div class="teal-body">
+
         <div class="quiz-header">
             <div class="quiz-header--toolbar">
-                <img class="responsiveImage" width="300" height="auto" src="/images/227_logo.png" alt="227 InfoSec logo">
+                <img class="logo" src="/images/227-logo-waterblue-horz.svg" alt="227 InfoSec logo">
+                <img class="logo-sm" src="/images/227logo-waterblue-vert.svg" alt="227 InfoSec logo">
+                <h4>Go Phish! <span>Phishing Quiz</span></h4>
             </div>
-    
-        </div>
+        </div><!--end quiz-header-->
+
         <span class="expand"></span>
 
 
@@ -103,7 +106,7 @@
             <!-- Results Page -->
             <section class="content__section" data-theme="b" data-role="page" id="pgResults" data-fullscreen="true">
                 <!-- Navbar setup Start -->
-                <header class="content__section--title" data-role="header" data-position="fixed">
+                <header class="content__section--title" data-position="fixed">
                     <h1 id="results-h1"></h1>
                 </header>
                 <div class="content__section--img-container img-container">
@@ -139,7 +142,8 @@
                         <div class="content__section--button">
                             <button id="certBtn" style="vertical-align:middle"><span>Get
                                     Certificate</span></button><br><br>
-                            <p id="certMultClick">Please wait for download to complete. <br>DO NOT CLICK "Get Certificate"
+                            <p id="certMultClick">Please wait for download to complete. <br>DO NOT CLICK "Get
+                                Certificate"
                                 multiple times.<br> You have been warned!</p>
                         </div>
                     </form>
@@ -171,13 +175,14 @@
             </section>
         </div>
         <span class="expand"></span>
-        
-            <!-- Footer Start -->
-            <footer data-role="footer" data-position="fixed">
-                <h6>227 InfoSec, Inc. 2022&copy;</h6>
-            </footer>
 
-        </div>
+        <!-- Footer Start -->
+        <footer data-role="footer" data-position="fixed">
+            <h6><span style="font-family: 'ubuntu'">227 InfoSec, Inc.</span> in collaboration with <span
+                    style="font-family: 'Oswald'">TheKuziCollaborative</span> &copy;2022 </h6>
+        </footer>
+
+    </div>
 
     </div>
     <!--teal-body-->
