--- a/pages/question2.html
+++ b/pages/question2.html
@@ -77,7 +77,7 @@
 
         </div><!-- end of fishtank -->
     </div><!-- end of fishtank_wrap -->
-    
+
         <!-- END FISHTANK BG -->
 
     <!-- TEAL SECTION -->
@@ -85,9 +85,11 @@
 
         <div class="quiz-header">
             <div class="quiz-header--toolbar">
-                <img src="/images/227_logo.png" width="10%" alt="227 InfoSec logo">
+                <img class="logo" src="/images/227-logo-waterblue-horz.svg" alt="227 InfoSec logo">
+                <img class="logo-sm" src="/images/227logo-waterblue-vert.svg" alt="227 InfoSec logo">
+                <h4>Go Phish! <span>Phishing Quiz</span></h4>
             </div>
-        </div> <!--end quiz-header-->
+        </div><!--end quiz-header-->
 
         <span class="expand"></span>
 
@@ -95,8 +97,9 @@
             <!-- Question #1 -->
             <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
                 <!-- Navbar setup Start -->
-                <header class="question-header" data-role="header">
-                    <h1>Keep it up!</h1>
+    <div class="phrase-prog">
+             <header class="question-header">
+                    <h2>Keep it up!</h2>
                 </header>
 
                 <div class="pBarContainer">
@@ -162,7 +165,9 @@
                         </span>
                     </p>
                 </div>
-                <!-- Quiz Nav -->
+           </div> <!-- end PHRASE and PROGRESS  -->
+
+            <!-- Quiz Nav -->
                 <main>
                     <iframe data-answer="A" width=960 height=300 src="../email_templates/email2.html">
                     </iframe>
@@ -227,7 +232,7 @@
 
         <!-- Footer Start -->
         <footer data-role="footer" data-position="fixed">
-            <h6>227 InfoSec, Inc. 2022&copy;</h6>
+            <h6><span style="font-family: 'ubuntu'"></span>227 InfoSec, Inc.</span> in collaboration with <span style="font-family: 'Oswald'">TheKuziCollaborative</span> &copy;2022 </h6>
         </footer>
 
     </div>
