--- a/pages/question8.html
+++ b/pages/question8.html
@@ -83,9 +83,11 @@
 
         <div class="quiz-header">
             <div class="quiz-header--toolbar">
-                <img src="/images/227_logo.png" width="10%" alt="227 InfoSec logo">
+                <img class="logo" src="/images/227-logo-waterblue-horz.svg" alt="227 InfoSec logo">
+                <img class="logo-sm" src="/images/227logo-waterblue-vert.svg" alt="227 InfoSec logo">
+                <h4>Go Phish! <span>Phishing Quiz</span></h4>
             </div>
-        </div> <!--end quiz-header-->
+        </div><!--end quiz-header-->
 
         <span class="expand"></span>
 
@@ -93,8 +95,9 @@
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
-            <header class="question-header" data-role="header">
-                <h1>Look out for sharks!</h1>
+<div class="phrase-prog">
+             <header class="question-header">
+                <h2>Look out for sharks!</h2>
             </header>
 
             <div class="pBarContainer">
@@ -160,8 +163,8 @@
                     </span>
                 </p>
             </div>
-
-            <!-- Quiz Nav -->
+        </div> <!-- end PHRASE and PROGRESS  -->
+        <!-- Quiz Nav -->
             <div class="em-template" style="border: none;">
                 <img class="fone" src="../images/Vectary texture(1).png" alt="">
             </div>
@@ -185,7 +188,7 @@
                         <div class="sad">
 
                             <img src="../images/animv13small.gif" alt="">
-                            <h1>Dang! you got hooked.</h1>
+                            <h1>Dang! You got hooked.</h1>
                             <p>Scroll to learn why</p>
                         </div>
                         <div class="mistakes">
@@ -222,7 +225,7 @@
         
             <!-- Footer Start -->
                 <footer data-role="footer" data-position="fixed">
-                    <h6>227 InfoSec, Inc. 2022&copy;</h6>
+                <h6><span style="font-family: 'ubuntu'">227 InfoSec, Inc.</span> in collaboration with <span style="font-family: 'Oswald'">TheKuziCollaborative</span> &copy;2022 </h6>
                 </footer>
         
             </div><!--teal-body-->
