em-from-div to grid/add font-family/mqs

--- a/email_templates/email1.html
+++ b/email_templates/email1.html
@@ -22,18 +22,23 @@
         <div class="em-from-div">
             <div class="em-dot">
                 <span>
-                BS
+                    BS
                 </span>
             </div>
-            <h4>
-                <strong>Book Writing Service</strong> &lt;sales@thewritingcrib.com&gt;
+            <h4 class="em-from">
+                <strong>Book Writing Service</strong>
+            <!-- </h4>
+            <h4 class="em-em"> -->
+                &lt;sales@thewritingcrib.com&gt;
             </h4>
-            <h4 class="em-dot-date">
+            <h4 class="em-date">
                 2/14/2022 12:06 PM
             </h4>
-        </div>
+            <h4 class="em-to"><br>To: Julie Mooley
+            </h4>
 
-        <h4><br>To: Julie Mooley</h4><br>
+        </div>
+<br>
         <div class="body">
             <h1 style="font-size: 2em;">
                 Turn your ideas into a bestselling book with our Professional <br>
@@ -49,7 +54,8 @@
             <br>
 
             <p class="tooltip" style="color: teal; font-size: 18px;"><strong>Chat with Us Now</strong>
-                <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/ <br>
+                <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/
+                    <br>
                     <strong>Click or tap to follow link</strong>
                 </span>
             </p><br>
@@ -59,7 +65,8 @@
             </p><br>
 
             <div class="tooltip tooltip-button">View Package Price
-                <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/ <br>
+                <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/
+                    <br>
                     <strong>Click or tap to follow link</strong>
                 </span>
             </div><br>
@@ -69,7 +76,7 @@
                 Click here to modify your
                 <span class="tooltip" style="color: blue; text-decoration: underline;">preferences
                     <span
-                        class="tooltiptext tooltip-content shine" >https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
+                        class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
                         <br>
                         <strong>Click or tap to follow link</strong>
                     </span>
@@ -78,7 +85,7 @@
                 <span class="tooltip" style="color: blue; text-decoration: underline;">unsubscribe
                     <span
                         class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
-                        <br> 
+                        <br>
                         <strong>Click or tap to follow link</strong>
                     </span>
                 </span>.
