--- a/email_templates/email10.html
+++ b/email_templates/email10.html
@@ -25,16 +25,16 @@
 
         <div class="em-from-div">
             <div class="em-dot">
-                <span>
+                <!-- <span> -->
 <img style="width: 100%; display: inline;" src="../images/person-icon.png" alt="">           
 
-                </span>
+                <!-- </span> -->
             </div>
-            <h4 class="em-dot-sender">
-                UPS eNotification
+            <h4 class="em-from em-dot-sender">
+                UPS eNotification<br class="em-br">
                 <span style="color: gray;">&lt;amazon@update-nt.com&gt;</span>
             </h4> 
-            <!-- <h4 class="em-dot-date">
+            <!-- <h4 class="em-date">
                 6/14/2021 12:06 PM
             </h4> -->
         </div>
