--- a/email_templates/email6.html
+++ b/email_templates/email6.html
@@ -23,11 +23,11 @@
                     D
                 </span>
             </div>
-            <h4>
-                <strong>Dropbox</strong>
+            <h4 class="em-from">
+                <strong>Dropbox</strong><br class="em-br">
                 <span style="color: gray;">&lt;no-reply@dropboxmail.com&gt;</span>
             </h4>
-            <h4 class="em-dot-date" style="color: gray;">
+            <h4 class="em-date" style="color: gray;">
                 1/11/2022 4:48 PM
             </h4>
         </div>
