--- a/email_templates/email7.html
+++ b/email_templates/email7.html
@@ -22,11 +22,10 @@
                 GH
                 </span>
             </div>
-            <h4>
-                <strong>Google Hangouts</strong> <span
-                    style="color: gray;">&lt;no-reply@google.hangouts.com&gt;</span>
+            <h4 class="em-from">
+                <strong>Google Hangouts</strong> <br class="em-br"><span style="color: gray;">&lt;no-reply@google.hangouts.com&gt;</span>
             </h4>
-            <h4 class="em-dot-date">
+            <h4 class="em-date">
                 2/14/2022 12:06 PM
             </h4>
         </div>
@@ -34,7 +33,6 @@
 
         <!-- <h4><br>To: chris.kissler@gmail.com</h4> -->
         <br>
-
         <div class="hangouts">
             <img src="../images/google-hangouts3.png" alt="google hangouts banner">
         </div>
