--- a/email_templates/email4.html
+++ b/email_templates/email4.html
@@ -25,16 +25,16 @@
                 SM
                 </span>
             </div>
-            <h4>
+            <h4 class="em-from">
                 <strong>Synchrony for your TJX Rewards® Platinum Mastercard®</strong>
-            </h4>
-            <h4 class="em-dot-date">
-                &lt;customer.service@mail.synchronybank.com&gt;<br>
+                &lt;customer.service@mail.synchronybank.com&gt;
+ </h4>
+            <h4 class="em-date">
                 1/11/2022 4:48 PM
             </h4>
         </div>
 
-        <h4><br>To: annab23@hotmail.com</h4><br>
+        <h4 class="em-to"><br>To: annab23@hotmail.com</h4><br>
         <br>
         <div class="body">
             <p style="float: right; margin: 10px;">Account ending in: 9528 | <span class="tooltip"
