--- a/email_templates/email4.html
+++ b/email_templates/email4.html
@@ -37,15 +37,16 @@
         <h4 class="em-to"><br>To: annab23@hotmail.com</h4><br>
         <br>
         <div class="body">
-            <p style="float: right; margin: 10px;">Account ending in: 9528 | <span class="tooltip"
+            <div class="tjx-synchrony">
+                <p style="margin: 10px;">Account ending in: 9528 | <span class="tooltip"
                     style="text-decoration: underline;">Log in
                     <span class="tooltiptext tooltip-content shine">https://tjx.syf.com/login/?lang=en<br>
                         <strong>Click or tap to follow link</strong>
                         </span>
                 </span></p>
-            <div class="tjx-synchrony">
-                <img src="../images/tjmx-logos.png" alt="tjx logos">
-                <img src="../images/synchrony-logo.png" alt="synchrony logo">
+
+                <img class="tjx" src="../images/tjmx-logos.png" alt="tjx logos">
+                <img class="sync"  src="../images/synchrony-logo.png" alt="synchrony logo">
             </div>
             <h1>
                 <span>You made a purchase of $31.11 from WALMART.</span>
