Fixed Scripts.js issues with value and data-value attributes.

--- a/pages/question8.html
+++ b/pages/question8.html
@@ -172,8 +172,8 @@
                 <!-- BUTTONS -->
                 <div class="allBtns answerBtns content__section--button">
 
-                    <button class="answerButtons" value="A" data-selected="A">Phishing</button>
-                    <button class="answerButtons" value="B" data-selected="B">Valid</button>
+                    <button class="answerButtons" value="A" data-value="A" data-selected="A">Phishing</button>
+                    <button class="answerButtons" value="B" data-value="B" data-selected="B">Valid</button>
 
                     <button id="btn" class="content__section--button nextBtns submitBtn"><span>Submit</span></button>
                 </div>
