Updated thankyou page

--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -120,7 +120,7 @@
                     <p>Try the "Phish-Test" again.
                     </p><br>
                     <div class="content__section--button">
-                        <button id="startQuizBtn" class="ui-btn-icon-bottom navView"><span>Play Again</span></button>
+                        <button id="tryAgain" class="ui-btn-icon-bottom navView"><span>Play Again</span></button>
 
                     </div>
 
