Minor update to thankyou page

--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -100,10 +100,10 @@
                 data-fullscreen="true">
                 <!-- Navbar setup Start -->
                 <header class="content__section--title">
-                    <h1>Thank You!</h1>
+                    <h1>Thank You</h1>
                     <H3>for successfully completing the "Phish-Test".</H3>
                     <h4>You have demonstrated that you have a keen eye and the ability to spot phishing scams. This
-                        ability will keep you and your company safe in today's digital world</h4>
+                        ability will keep you and your company safe in today's digital world!</h4>
                 </header>
 
                 <!-- Home Page Body Start -->
