--- a/pages/question10.html
+++ b/pages/question10.html
@@ -100,7 +100,7 @@
                 <!-- Navbar setup Start -->
     <div class="phrase-prog">
              <header class="question-header">
-                    <h2>Don't let them hook you!</h2>
+                    <h2>Don't get baited!</h2>
                 </header>
 
                 <div class="pBarContainer">
