add happy octopus for results

--- a/pages/results.html
+++ b/pages/results.html
@@ -110,8 +110,10 @@
                     <h1 id="results-h1"></h1>
                 </header>
                 <div class="content__section--img-container img-container">
-                    <img class="responsiveImage" width="300" height="auto" src="../images/scared-fish-final-200w.gif"
-                        alt="scared fish gif">
+                    <img id="over80img" class="responsiveImage" width="300" height="auto" src="../images/octopus.png"
+                    alt="happy octopus">
+
+                    <img id="under80img" class="responsiveImage" width="300" height="auto" src="../images/scared-fish-final-300w-rmv1-2.gif" alt="scared fish gif">
                 </div>
 
                 <!-- Home Page Body Start -->
@@ -151,22 +153,6 @@
                     <div class="content__section--button">
                         <button id="tryAgain"><span>Try again</span></button>
                     </div>
-                    <!-- <button id="certBtn" test22
-                    style="width: 200px; height: 75px;background: #C82255; border-radius: 10px; border: none; color: white; font-size: 1.5em; font-family:'Courier New', Courier, monospace">Download
-                    Certificate</button> -->
-                    <!-- <input style="width: 200px; height: 50px;background: #C82255; border-radius: 10px; border: none; color: white; font-size: 1.5em; font-family:'Courier New', Courier, monospace" type="submit"> -->
-                    <!-- </form> -->
-
-
-                    <!-- <nav data-role="navbar">
-
-                                                            <button id="userResults"><a href="" data-icon="bars" class="ui-btn-icon-bottom navView"
-                                                                data-transition="fade">Submit Results</a> </button>
-                                                        </nav> -->
-
-
-
-
 
 
                 </main>
