--- a/pages/results.html
+++ b/pages/results.html
@@ -110,7 +110,7 @@
                     <h1 id="results-h1"></h1>
                 </header>
                 <div class="content__section--img-container img-container">
-                    <img id="over80img" class="responsiveImage" width="300" height="auto" src="../images/octopus.png"
+                    <img id="over80img" class="responsiveImage" width="300" height="auto" src="../images/octopus-on-rocks.png"
                     alt="happy octopus">
 
                     <img id="under80img" class="responsiveImage" width="300" height="auto" src="../images/scared-fish-final-300w-rmv1-2.gif" alt="scared fish gif">
